--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
-    <link href="styles/porfolio.css" />
-
+    <link rel="stylesheet" href="styles/portfolio.css" />
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
@@ -24,10 +23,11 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="d-flex bg-warning">
-      <h1>Hello world</h1>
-      <p>Hi there</p>
-      <i class="fa-brands fa-instagram"></i>
+    <div class="hero">
+      <p>👋🏽Hello,I am</p>
+      <h1>Monica Gikaru</h1>
+      <h2 class="mb-3">A front-end developer based in Kenya</h2>
+      <a href="#" class="btn btn-branding">Contact me</a>
     </div>
   </body>
 </html>
