--- a/index.html
+++ b/index.html
@@ -27,7 +27,24 @@
       <p>👋🏽Hello,I am</p>
       <h1>Monica Gikaru</h1>
       <h2 class="mb-3">A front-end developer based in Kenya</h2>
-      <a href="#" class="btn btn-branding">Contact me</a>
+      <div>
+        <a href="#" class="btn btn-branding">Contact me</a>
+      </div>
+      <p class="text-center m-5">
+        Featured Project which my best projects be choice to show
+      </p>
+    </div>
+    <div class="container">
+      <div class="row"><div class="col-6"</div>
+
+      <h2 class="mb-5">Yorgurt Project</h2>
+      <p class="mb-4 text-muted">
+        Yogurt Project Far far away, behind the word mountains, far from the
+        countries Vokalia and Consonantia, there live the blind texts. Separated
+        they live in Bookmarksgrove right at the coast of the Semantics, a large
+        language ocean. A small river named Duden flows by
+      </p>
+      <a href="" class="btn-branding-outline">Learn more</a>
     </div>
   </body>
 </html>
