--- a/index.html
+++ b/index.html
@@ -35,16 +35,57 @@
       </p>
     </div>
     <div class="container">
-      <div class="row"><div class="col-6"</div>
-
-      <h2 class="mb-5">Yorgurt Project</h2>
-      <p class="mb-4 text-muted">
-        Yogurt Project Far far away, behind the word mountains, far from the
-        countries Vokalia and Consonantia, there live the blind texts. Separated
-        they live in Bookmarksgrove right at the coast of the Semantics, a large
-        language ocean. A small river named Duden flows by
-      </p>
-      <a href="" class="btn-branding-outline">Learn more</a>
+      <div class="row mb-5">
+      <div class="col d-none d-lg-block">
+        <img src="images/yorgurt.png" class="img-fluid" />
+      </div>
+      <div class="col-6">
+        <div class="project-description">
+          <h2 class="mb-5">Yorgurt Project</h2>
+          <p class="mb-4 text-muted">
+            Yogurt Project Far far away, behind the word mountains, far from the
+            countries Vokalia and Consonantia, there live the blind texts.
+            Separated they live in Bookmarksgrove right at the coast of the
+            Semantics, a large language ocean. A small river named Duden flows
+            by
+          </p>
+          <a href="" class="btn-branding-outline">Learn more</a>
+        </div>
+      </div>
+      <div class="row mb-5">
+      <div class="col-6">
+        <div class="project-description">
+          <h2 class="mb-5">Weather App</h2>
+          <p class="mb-4 text-muted">
+            Yogurt Project Far far away, behind the word mountains, far from the
+            countries Vokalia and Consonantia, there live the blind texts.
+            Separated they live in Bookmarksgrove right at the coast of the
+            Semantics, a large language ocean. A small river named Duden flows
+            by
+          </p>
+          <a href="" class="btn-branding-outline">Learn more</a>
+          </div>
+          </div>
+      <div class="col d-none d-lg-block">
+        <img src="images/weather.png" class="img-fluid" />
+      </div>
+       <div class="row mb-5">
+      <div class="col d-none d-lg-block">
+        <img src="images/dictionary.png" class="img-fluid" />
+      </div>
+      <div class="col-6">
+        <div class="project-description">
+          <h2 class="mb-5">Dictionary Project</h2>
+          <p class="mb-4 text-muted">
+            Yogurt Project Far far away, behind the word mountains, far from the
+            countries Vokalia and Consonantia, there live the blind texts.
+            Separated they live in Bookmarksgrove right at the coast of the
+            Semantics, a large language ocean. A small river named Duden flows
+            by
+          </p>
+          <a href="" class="btn-branding-outline">Learn more</a>
+        </div>
+      </div>
     </div>
   </body>
 </html>
