--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
       <div>
         <a href="#" class="btn btn-branding">Contact me</a>
       </div>
+      </div>
       <p class="text-center m-5">
         Featured Project which my best projects be choice to show
       </p>
