--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <div class="container">
       <div class="row mb-5">
         <div class="col d-none d-lg-block">
-          <img src="images/yogurt.png" class="img-fluid" alt="" />
+          <img src="images/yorgurt.png" class="img-fluid" alt="" />
         </div>
         <div class="col">
           <div class="project-desciption">
