--- a/styles/about.html
+++ b/styles/about.html
@@ -30,12 +30,12 @@
     ></script>
   </head>
   <body>
-    <div class="about-section container">
+    <div class="content-container container">
       <div class="row">
         <div class="col-lg-6">
-          <div class="about-section-content">
+          <div class="content">
             <h1 class="mb-4">Hi I am Monica Gikaru</h1>
-            <h2 class="mb-4">Frontend Developer, based in Kenya.</h2>
+            <h2 class="mb-4">Front-end Developer, based in Kenya.</h2>
             <p class="mb-5">
               For anyone who wants to start learning code, this workshop is very
               interesting. You will be challenged with different exercises, and
@@ -46,7 +46,7 @@
           </div>
         </div>
         <div class="col-lg-6">
-          <img src="images/wangui.png" alt="" class="img-fluid" />
+          <img src="../images/giks.png" alt="" class="img-fluid mb-3 rounded" />
         </div>
       </div>
     </div>
