--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <a href="/about.html">About</a>
           </li>
           <li><a href="/work.html">Work</a></li>
-          <li><a href="/contact.html">Contact</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
     </div>
@@ -114,6 +114,35 @@
           </div>
         </div>
       </div>
+      <footer>
+        <div
+          class="contact-box d-flex justify-content-between mb-5 d-none d-md-flex"
+        >
+          <div>
+            <h4>Work Inquiry</h4>
+            <p class="text-muted">Lets work together</p>
+          </div>
+          <div>
+            <a href="" class="btn btn-branding mt-4">Contact me</a>
+          </div>
+        </div>
+        <div class="d-flex justify-content-center mb-5 x">
+          <a href="mailto:wangui16monica@gmail.com" class="email-link"
+            >wangui16monica@gmail.com</a
+          >
+        </div>
+        <div class="social-links d-flex justify-content-center">
+          <a href="https://www.github.com/Monica-G30" target="_blank">
+            <i class="fa-brands fa-github"></i
+          ></a>
+          <a href="https://www.instagram.com/wangui_gikaru" target="_blank">
+            <i class="fa-brands fa-instagram"></i
+          ></a>
+          <a href="https://www.twitter.com/monica" target="_blank">
+            <i class="fa-brands fa-twitter"></i
+          ></a>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
