--- a/index.html
+++ b/index.html
@@ -43,10 +43,14 @@
             <a href="/">Home</a>
           </li>
           <li>
-            <a href="/about.html">About</a>
+            <a href="/about.html"> About</a>
           </li>
-          <li><a href="/work.html">Work</a></li>
-          <li><a href="contact.html">Contact</a></li>
+          <li>
+            <a href="/work.html"> Work</a>
+          </li>
+          <li>
+            <a href="/contact.html">Contact</a>
+          </li>
         </ul>
       </nav>
     </div>
@@ -133,13 +137,13 @@
         </div>
         <div class="social-links d-flex justify-content-center">
           <a href="https://www.github.com/Monica-G30" target="_blank">
-            <i class="fa-brands fa-github"></i
+            <i class="fab fa-github"></i
           ></a>
           <a href="https://www.instagram.com/wangui_gikaru" target="_blank">
-            <i class="fa-brands fa-instagram"></i
+            <i class="fab fa-instagram"></i
           ></a>
           <a href="https://www.twitter.com/monica" target="_blank">
-            <i class="fa-brands fa-twitter"></i
+            <i class="fab fa-twitter"></i
           ></a>
         </div>
       </footer>
