--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
       name="description"
       content="Monica is a Front-end engineer based in Kenya"
     />
-    <title>Front-end developer-Monica Gikaru</title>
+    <title>About-Monica Gikaru</title>
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
@@ -21,7 +21,7 @@
       href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@500;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="styles/portfolio.css" />
+    <link rel="stylesheet" href="/styles/portfolio.css" />
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
@@ -37,18 +37,18 @@
     <div class="container">
       <nav class="d-flex justify-content-between">
         <a href="/" title="Homepage">
-          <img src="images/logo.png" class="logo d-none d-md-block" alt="" />
+          <img src="../images/logo.png" class="logo d-none d-md-block" alt="" />
           <img
-            src="images/logo-small.png"
+            src="../images/logo-small.png"
             class="logo d-block d-md-none"
             alt="Monica's logo"
           />
         </a>
         <ul>
-          <li class="active">
+          <li>
             <a href="/" title="Homepage">Home</a>
           </li>
-          <li>
+          <li class="active">
             <a href="/about.html" title="More about Monica"> About</a>
           </li>
           <li>
@@ -59,88 +59,28 @@
           </li>
         </ul>
       </nav>
-    </div>
 
-    <div class="hero">
-      <p>👋 Hello, I am</p>
-      <h1>Monica Gikaru</h1>
-      <h2 class="mb-5">Front-end developer based in Kenya</h2>
-      <div>
-        <a href="contact.html" title="Contact" class="btn btn-branding"
-          >Contact me</a
-        >
-      </div>
-    </div>
-    <p class="text-center m-5">
-      Featured Project which my best projects be choice to show
-    </p>
-    <div class="container">
-      <div class="row mb-5">
-        <div class="col d-none d-lg-block">
-          <img
-            src="images/yorgurt.png"
-            class="img-fluid"
-            alt="Yorgurt project preview"
-          />
-        </div>
-        <div class="col">
-          <div class="project-desciption">
-            <h2 class="mb-5">Yogurt Project</h2>
-            <p class="mb-5 text-muted">
-              Far far away, behind the word mountains, far from the countries
-              Vokalia and Consonantia, there live the blind texts. Separated
-              they live in Bookmarksgrove right at the coast of the Semantics, a
-              large language ocean. A small river named Duden flows by
-            </p>
-            <a href="/work.html" class="btn btn-branding-outline">
-              Learn more
-            </a>
+      <div class="content-container container">
+        <div class="row">
+          <div class="col-lg-6">
+            <div class="content">
+              <h1 class="mb-4">Hi I am Monica Gikaru</h1>
+              <h2 class="mb-4">Front-end Developer, based in Kenya.</h2>
+              <p class="mb-5">
+                For anyone who wants to start learning code, this workshop is
+                very interesting. You will be challenged with different
+                exercises, and everything is well explained, homework and
+                deadlines are good for keep focus
+              </p>
+              <a href="/work.html" class="btn btn-branding">See my projects</a>
+            </div>
           </div>
-        </div>
-      </div>
-      <div class="row mb-5">
-        <div class="col">
-          <div class="project-desciption">
-            <h2 class="mb-5">Weather App</h2>
-            <p class="mb-5 text-muted">
-              Far far away, behind the word mountains, far from the countries
-              Vokalia and Consonantia, there live the blind texts. Separated
-              they live in Bookmarksgrove right at the coast of the Semantics, a
-              large language ocean. A small river named Duden flows by
-            </p>
-            <a href="/work.html" class="btn btn-branding-outline">
-              Learn more
-            </a>
-          </div>
-        </div>
-        <div class="col d-none d-lg-block">
-          <img
-            src="images/weather.png"
-            class="img-fluid"
-            alt="Preview of the weather app"
-          />
-        </div>
-      </div>
-      <div class="row">
-        <div class="col d-none d-lg-block">
-          <img
-            src="images/dictionary.png"
-            class="img-fluid"
-            alt="A preview of the dictionary"
-          />
-        </div>
-        <div class="col">
-          <div class="project-desciption">
-            <h2 class="mb-5">Dictionary App</h2>
-            <p class="mb-5 text-muted">
-              Far far away, behind the word mountains, far from the countries
-              Vokalia and Consonantia, there live the blind texts. Separated
-              they live in Bookmarksgrove right at the coast of the Semantics, a
-              large language ocean. A small river named Duden flows by
-            </p>
-            <a href="/work.html" class="btn btn-branding-outline">
-              Learn more
-            </a>
+          <div class="col-lg-6">
+            <img
+              src="../images/giks.png"
+              alt=""
+              class="img-fluid mb-3 rounded"
+            />
           </div>
         </div>
       </div>
