--- a/work.html
+++ b/work.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
+        <meta
       name="description"
       content="Monica is a Front-end engineer based in Kenya"
     />
-    <title>Front-end developer-Monica Gikaru</title>
+    <title>Monica's project</title>
+
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
@@ -21,7 +22,7 @@
       href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@500;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="styles/portfolio.css" />
+    <link rel="stylesheet" href="/styles/portfolio.css" />
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
@@ -34,24 +35,24 @@
     ></script>
   </head>
   <body>
-    <div class="container">
+ <div class="container">
       <nav class="d-flex justify-content-between">
         <a href="/" title="Homepage">
-          <img src="images/logo.png" class="logo d-none d-md-block" alt="" />
+          <img src="../images/logo.png" class="logo d-none d-md-block" alt="" />
           <img
-            src="images/logo-small.png"
+            src="../images/logo-small.png"
             class="logo d-block d-md-none"
             alt="Monica's logo"
           />
         </a>
         <ul>
-          <li class="active">
+          <li>
             <a href="/" title="Homepage">Home</a>
           </li>
           <li>
             <a href="/about.html" title="More about Monica"> About</a>
           </li>
-          <li>
+          <li class="active">
             <a href="/work.html" title="Monica's work"> Work</a>
           </li>
           <li>
@@ -59,92 +60,34 @@
           </li>
         </ul>
       </nav>
-    </div>
+    <div class="content-container container">
+      <div class="content">
+        <h1 class="mb-5">Take a look at what we've been working on!</h1>
+        <div class="row">
+          <div class="col-md-6 mb-4">
+            <img src="../images/yorgurt.png" class="img-fluid mb-3 rounded" alt="Yogurt Project" />
+            <h3 class="text-center m-0">Yorgurt Project</h3>
+            <p class="text-center text-muted">Built with CSS and HTML.</p>
+          </div>
+           <div class="col-md-6 mb-4">
+            <img src="../images/weather.png" class="img-fluid mb-3 rounded" alt="Weather project"/>
+            <h3 class="text-center m-0">Weather App</h3>
+            <p class="text-center text-muted">Built with CSS,HTML and Java Script.</p>
 
-    <div class="hero">
-      <p>👋 Hello, I am</p>
-      <h1>Monica Gikaru</h1>
-      <h2 class="mb-5">Front-end developer based in Kenya</h2>
-      <div>
-        <a href="contact.html" title="Contact" class="btn btn-branding"
-          >Contact me</a
-        >
-      </div>
-    </div>
-    <p class="text-center m-5">
-      Featured Project which my best projects be choice to show
-    </p>
-    <div class="container">
-      <div class="row mb-5">
-        <div class="col d-none d-lg-block">
-          <img
-            src="images/yorgurt.png"
-            class="img-fluid"
-            alt="Yorgurt project preview"
-          />
         </div>
-        <div class="col">
-          <div class="project-desciption">
-            <h2 class="mb-5">Yogurt Project</h2>
-            <p class="mb-5 text-muted">
-              Far far away, behind the word mountains, far from the countries
-              Vokalia and Consonantia, there live the blind texts. Separated
-              they live in Bookmarksgrove right at the coast of the Semantics, a
-              large language ocean. A small river named Duden flows by
-            </p>
-            <a href="/work.html" class="btn btn-branding-outline">
-              Learn more
-            </a>
-          </div>
+         <div class="col-md-6 mb-4">
+            <img src="../images/dictionary.png" class="img-fluid mb-3 rounded" alt="Dictionary Project" />
+            <h3 class="text-center m-0">Dictionary App</h3>
+            <p class="text-center text-muted">Built with HTML,CSS and React.</p>
+        </div>
+         <div class="col-md-6 mb-4">
+            <img src="../images/translation.png" class="img-fluid mb-3 rounded" alt="Translation Project" />
+            <h3 class="text-center m-0">Translation Project</h3>
+            <p class="text-center text-muted">Built with HTML,CSS and React.</p>
         </div>
       </div>
-      <div class="row mb-5">
-        <div class="col">
-          <div class="project-desciption">
-            <h2 class="mb-5">Weather App</h2>
-            <p class="mb-5 text-muted">
-              Far far away, behind the word mountains, far from the countries
-              Vokalia and Consonantia, there live the blind texts. Separated
-              they live in Bookmarksgrove right at the coast of the Semantics, a
-              large language ocean. A small river named Duden flows by
-            </p>
-            <a href="/work.html" class="btn btn-branding-outline">
-              Learn more
-            </a>
-          </div>
-        </div>
-        <div class="col d-none d-lg-block">
-          <img
-            src="images/weather.png"
-            class="img-fluid"
-            alt="Preview of the weather app"
-          />
-        </div>
       </div>
-      <div class="row">
-        <div class="col d-none d-lg-block">
-          <img
-            src="images/dictionary.png"
-            class="img-fluid"
-            alt="A preview of the dictionary"
-          />
-        </div>
-        <div class="col">
-          <div class="project-desciption">
-            <h2 class="mb-5">Dictionary App</h2>
-            <p class="mb-5 text-muted">
-              Far far away, behind the word mountains, far from the countries
-              Vokalia and Consonantia, there live the blind texts. Separated
-              they live in Bookmarksgrove right at the coast of the Semantics, a
-              large language ocean. A small river named Duden flows by
-            </p>
-            <a href="/work.html" class="btn btn-branding-outline">
-              Learn more
-            </a>
-          </div>
-        </div>
-      </div>
-      <footer>
+     <footer>
         <div
           class="contact-box d-flex justify-content-between mb-5 d-none d-md-flex"
         >
