--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Monica is a Front-end engineer based in Kenya"
+      content=" Contact Monica a Front-end engineer based in Kenya"
     />
     <title>Contact-Monica Gikaru</title>
 
