--- a/index.html
+++ b/index.html
@@ -178,11 +178,11 @@
             <i class="fab fa-github"></i
           ></a>
           <a
-            href="https://www.instagram.com/wangui_gikaru"
+            href="https://www.linkedin.com/feed/MonicaWangui"
             target="_blank"
-            title="Instagram Profile"
+            title="Linkedin Profile"
           >
-            <i class="fab fa-instagram"></i
+            <i class="fab fa-linkedin"></i
           ></a>
           <a
             href="https://www.twitter.com/monica"
